Utopia-688 - Fix breadcrumb alignmnent

--- a/src/frontend/src/components/common/Breadcrumbs/_breadcrumbs.scss
+++ b/src/frontend/src/components/common/Breadcrumbs/_breadcrumbs.scss
@@ -1,7 +1,6 @@
 .breadcrumbs__nav {
   position: absolute;
-  top: 0;
-  margin-block-start: 10em;
+  top: 4rem;
   display: flex;
   align-items: center;
   gap: 0.7em;
